; ModuleID = '/home/carl/AnghaBench/libgit2/tests/index/extr_read_index.c_roundtrip_with_read_index.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/index/extr_read_index.c_roundtrip_with_read_index.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@_repo = common dso_local global i32 0, align 4
@_index = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*)* @roundtrip_with_read_index to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @roundtrip_with_read_index(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  store i8* %0, i8** %2, align 8
  %7 = load i8*, i8** %2, align 8
  %8 = call i32 @git_oid_fromstr(i32* %3, i8* %7)
  %9 = call i32 @cl_git_pass(i32 %8)
  %10 = load i32, i32* @_repo, align 4
  %11 = call i32 @git_tree_lookup(i32** %5, i32 %10, i32* %3)
  %12 = call i32 @cl_git_pass(i32 %11)
  %13 = call i32 @git_index_new(i32** %6)
  %14 = call i32 @cl_git_pass(i32 %13)
  %15 = load i32*, i32** %6, align 8
  %16 = load i32*, i32** %5, align 8
  %17 = call i32 @git_index_read_tree(i32* %15, i32* %16)
  %18 = call i32 @cl_git_pass(i32 %17)
  %19 = load i32, i32* @_index, align 4
  %20 = load i32*, i32** %6, align 8
  %21 = call i32 @git_index_read_index(i32 %19, i32* %20)
  %22 = call i32 @cl_git_pass(i32 %21)
  %23 = load i32, i32* @_index, align 4
  %24 = call i32 @git_index_write_tree(i32* %4, i32 %23)
  %25 = call i32 @cl_git_pass(i32 %24)
  %26 = load i32*, i32** %5, align 8
  %27 = call i32 @git_tree_free(i32* %26)
  %28 = load i32*, i32** %6, align 8
  %29 = call i32 @git_index_free(i32* %28)
  %30 = call i32 @git_oid_equal(i32* %3, i32* %4)
  ret i32 %30
}

declare dso_local i32 @cl_git_pass(i32) #1

declare dso_local i32 @git_oid_fromstr(i32*, i8*) #1

declare dso_local i32 @git_tree_lookup(i32**, i32, i32*) #1

declare dso_local i32 @git_index_new(i32**) #1

declare dso_local i32 @git_index_read_tree(i32*, i32*) #1

declare dso_local i32 @git_index_read_index(i32, i32*) #1

declare dso_local i32 @git_index_write_tree(i32*, i32) #1

declare dso_local i32 @git_tree_free(i32*) #1

declare dso_local i32 @git_index_free(i32*) #1

declare dso_local i32 @git_oid_equal(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
